# min-knapsack-with-compactness

./: CITATION.cff  CMakeLists.txt  FindGurobi.cmake  LICENSE  README.md
cluster/: collect_results.py  run_tests.py
data/: cappello_transform_raw_data.py  generator.py  new_synthetic_instances.txt  plot_instance.py
data/cappello-instances/: 00lqpw_200_0.95_3.json  01gl7g_200_0.90_2.json  09vdw5_40_0.95_3.json  0cgi3o_200_0.95_3.json  0he3ba_200_0.95_5.json  0iuhps_200_0.90_2.json  0mjcjo_200_0.90_2.json  0ojx1h_200_0.95_5.json  0qvkqi_200_0.95_5.json  0rv931_200_0.90_5.json  13r6pq_200_0.95_3.json  14q98i_40_0.95_2.json  17pk3q_200_0.95_2.json  18hh1v_200_0.90_3.json  1ja9as_40_0.90_2.json  1n9poq_200_0.95_5.json  1nt46o_200_0.95_3.json  1p4i5c_200_0.90_2.json  1psprx_200_0.95_2.json  1te26g_200_0.90_2.json  1yvzp9_200_0.90_5.json  1zlwc4_40_0.95_5.json  21j4sr_200_0.95_5.json  2hsk4t_200_0.95_2.json  2j3ncn_200_0.95_2.json  2kii8o_200_0.95_5.json  2ntfm0_200_0.90_2.json  2pbo4t_200_0.95_3.json  2q73d6_200_0.90_3.json  2rn0qs_200_0.90_3.json  2y7i9v_200_0.90_3.json  2yd7gr_200_0.90_5.json  36ntz2_200_0.90_2.json  3a6uni_200_0.95_5.json  3fd7f8_200_0.90_3.json  3jos3w_200_0.90_2.json  3lummx_200_0.95_3.json  3mr3c4_200_0.90_3.json  3pq7y2_200_0.90_5.json  42l5f5_40_0.95_5.json  (+260 more)
data/cappello-raw-data/: ex1_n=40_cp=16_seed=1.csv  ex1_n=40_cp=16_seed=10.csv  ex1_n=40_cp=16_seed=2.csv  ex1_n=40_cp=16_seed=3.csv  ex1_n=40_cp=16_seed=4.csv  ex1_n=40_cp=16_seed=5.csv  ex1_n=40_cp=16_seed=6.csv  ex1_n=40_cp=16_seed=7.csv  ex1_n=40_cp=16_seed=8.csv  ex1_n=40_cp=16_seed=9.csv  (+10 more)
src/: BranchAndCut.cpp  BranchAndCut.h  BranchAndCutSeparation.cpp  BranchAndCutSeparation.h  CompactModel.cpp  CompactModel.h  GreedyHeuristic.cpp  GreedyHeuristic.h  InitialSolution.cpp  InitialSolution.h  Labelling.cpp  Labelling.h  Problem.cpp  Problem.h  UnitProfitDP.cpp  UnitProfitDP.h  main.cpp
(+568 files in other folders)
